--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,31 @@
-ipyleaflet>=0.14.0
-ipywidgets>=7.7.1
-matplotlib>=3.7.0
-pmdarima
-numpy>=1.24.2
-opencv-python>=4.1.2
+# Dependencias críticas para pmdarima y otros
+numpy==1.24.3
+Cython
+setuptools
+wheel
+scipy
 pandas>=1.5.3
-pymysql>=1.0.2
-python-dotenv>=0.20.0
-requests>=2.27.1
 scikit-learn
-seaborn>=0.12.2
-sqlalchemy>=1.4.37
-sympy>=1.10.1
-xgboost
-bcchapi
-bs4
 statsmodels
+joblib
+
+# Visualización y widgets
+matplotlib>=3.7.0
+seaborn>=0.12.2
+ipywidgets>=7.7.1
+ipyleaflet>=0.14.0
 streamlit
 folium
 streamlit_folium
+
+# Otros paquetes usados
+xgboost
+opencv-python>=4.1.2
+pmdarima
+requests>=2.27.1
+python-dotenv>=0.20.0
+sqlalchemy>=1.4.37
+pymysql>=1.0.2
+sympy>=1.10.1
+bs4
+bcchapi
