--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: streamlit run src/TourDataApp.py --server.port 10000 --server.enableCORS false
+    startCommand: streamlit run TourDataApp.py --server.port 10000 --server.enableCORS false
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.13
